--- a/MyApp/src/app/Component/toolbar/toolbar.css
+++ b/MyApp/src/app/Component/toolbar/toolbar.css
@@ -1,8 +1,10 @@
-html{
-    scroll-behavior:smooth;
-}
 mat-toolbar{
     background-color:#ffffff;
+    z-index:1000;
+    position: fixed;
+}
+mat-toolbar span{
+  margin-left:20px;
 }
 .property1{  
   margin-left:auto;
@@ -10,24 +12,135 @@ mat-toolbar{
 .property1 a{
   padding: 5px 16px;
   font-size: 12px;
-  
 }
 a[mat-raised-button]{
     background-color:#b82228;
     color:#ffffff;
+   }
+
+button[mat-raised-button]{
+  background-color:#b82228;
+  color:#ffffff;
 }
-.property2{
-    width:50%;
-    height:500px;
-    text-align:center;
-    font-size:20px;
-    padding:50px;
-    text-wrap: 60px;
-    width: 50%;
-}
-mat-grid-list {
-    flex:wrap;
-  margin:60px;
-  background: lightblue;
+#aboutus{
+  padding-top:100px;
 }
 
+.property2{
+    background-color: #ffffff;
+    text-align:center;
+    padding:80px 0;
+    max-width: 1200px;
+    margin:0 auto;
+    height:auto;
+    border-bottom: 1px solid #bdbcbc;
+}
+.property2 p{
+  font-size: larger;
+  margin:0 auto;
+  width: 900px;
+}
+
+.carousel-container {
+  display: flex;
+  align-items: center;
+  text-align:left;
+  justify-content: center;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.cards-wrapper {
+  overflow: hidden;
+  width: 960px;
+}
+
+.cards {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.card{
+  width: 300px;
+  height:350px;
+  margin: 0 10px;
+} 
+
+.nav-button {
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+}
+.ig{
+  width:auto;
+  height:min-content;
+  border-radius:8px;
+}
+
+.title{
+  text-align:center;
+}
+
+ form {
+	max-width: 400px;;
+	padding:5px;
+	border: 1px solid #ccc;
+  border-style:none;
+	border-radius: 5px;
+}
+
+.error{
+    color:red;
+}
+
+button:disabled {
+	background-color: #ccc;
+}
+
+label{
+  color:black;
+  font-weight:normal;
+}
+
+input{
+  width:270px;
+  height:30px;
+}
+
+.left{
+    background-color: #ffffff;
+    text-align:left;
+    padding:40px 0;
+    max-width: 1200px;
+    margin-left:50px;
+}
+form button{
+  width:280px;
+  color:#fff;
+  background-color:#b82228;
+  border-color: #b82228;
+  border-radius: 8px;
+  height:30px;
+}
+
+.get-contact{
+  display:flex;
+  justify-content:space-between;
+  gap:30px;
+  flex-wrap:wrap;
+}
+.get-company li,a{
+  color:black;
+  text-decoration:none;
+  list-style-type: none;
+  text-align:center;
+}
+.get-comp
+.get-address{
+  text-align:center;
+  text-wrap:balance;
+}
+.property3{
+
+}
