--- a/MyApp/src/app/Component/toolbar/toolbar.html
+++ b/MyApp/src/app/Component/toolbar/toolbar.html
@@ -1,6 +1,8 @@
-
+<!-- 
 <mat-toolbar style="background-color: aliceblue">
-  <span style="color:#b82228;font-family:regular;font-size:48px;">AASLIN</span>
+  <img  height="60px" width="70px" src="aaslin_logo.png">
+  <span style="color:#b82228;font-family:regular;">AASLIN Technologies <br>Private Limited</span>
+
   <div class="property1">
     <a mat-button href="#card" target="text-decoration:none">Home</a>
     <a mat-button href="#aboutus" target="text-decoration:none">About Us</a>
@@ -9,9 +11,100 @@
     <a mat-button href="#careers" target="text-decoration:none">Careers</a>
     <a mat-button href="#WhyUs" target="text-decoration:none">Why Us</a>
     <a mat-button href="#contacts" target="text-decoration:none">Contacts</a>
-    <a mat-raised-button routerLink="/Register" routerLinkActive="active-link">Register</a>
   </div>
+</mat-toolbar> -->
+<mat-toolbar style="background-color: aliceblue" class="toolbar">
+  <img height="60px" width="70px" src="aaslin_logo.png" alt="Logo">
+  <span class="company-name">AASLIN Technologies <br>Private Limited</span>
+
+  <!-- Desktop Navigation -->
+  <div class="property1 desktop-nav">
+    <a mat-button href="#card">Home</a>
+    <a mat-button href="#aboutus">About Us</a>
+    <a mat-button href="#service">Services</a>
+    <a mat-button href="#team">Team</a>
+    <a mat-button href="#careers">Careers</a>
+    <a mat-button href="#WhyUs">Why Us</a>
+    <a mat-button href="#contacts">Contacts</a>
+  </div>
+
+  <!-- Mobile Menu Button -->
+  <button mat-icon-button class="mobile-menu-btn" (click)="sidenav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
 </mat-toolbar>
+
+<!-- Mobile Side Navigation -->
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #sidenav mode="over" class="mobile-nav">
+    <button mat-icon-button class="close-btn" (click)="sidenav.close()">
+      <mat-icon>close</mat-icon>
+    </button>
+    <a mat-button href="#card" (click)="sidenav.close()">Home</a>
+    <a mat-button href="#aboutus" (click)="sidenav.close()">About Us</a>
+    <a mat-button href="#service" (click)="sidenav.close()">Services</a>
+    <a mat-button href="#team" (click)="sidenav.close()">Team</a>
+    <a mat-button href="#careers" (click)="sidenav.close()">Careers</a>
+    <a mat-button href="#WhyUs" (click)="sidenav.close()">Why Us</a>
+    <a mat-button href="#contacts" (click)="sidenav.close()">Contacts</a>
+  </mat-sidenav>
+
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+<!-- 
+<mat-sidenav-container class="sidenav-container">
+  
+ //Sidenav for Mobile 
+  <mat-sidenav #sidenav mode="over" class="mobile-nav">
+    <button mat-icon-button class="close-btn" (click)="sidenav.close()">
+      <mat-icon>close</mat-icon>
+    </button>
+    <a mat-button href="#card" (click)="sidenav.close()">Home</a>
+    <a mat-button href="#aboutus" (click)="sidenav.close()">About Us</a>
+    <a mat-button href="#service" (click)="sidenav.close()">Services</a>
+    <a mat-button href="#team" (click)="sidenav.close()">Team</a>
+    <a mat-button href="#careers" (click)="sidenav.close()">Careers</a>
+    <a mat-button href="#WhyUs" (click)="sidenav.close()">Why Us</a>
+    <a mat-button href="#contacts" (click)="sidenav.close()">Contacts</a>
+  </mat-sidenav>
+
+  <!-- Main Content 
+  <mat-sidenav-content>
+    <mat-toolbar style="background-color: aliceblue" class="toolbar">
+      <img height="60px" width="70px" src="aaslin_logo.png" alt="Logo">
+      <span class="company-name">
+        AASLIN Technologies <br>Private Limited
+      </span>
+
+      <!-- Desktop Menu 
+      <div class="property1 desktop-nav">
+        <a mat-button href="#card">Home</a>
+        <a mat-button href="#aboutus">About Us</a>
+        <a mat-button href="#service">Services</a>
+        <a mat-button href="#team">Team</a>
+        <a mat-button href="#careers">Careers</a>
+        <a mat-button href="#WhyUs">Why Us</a>
+        <a mat-button href="#contacts">Contacts</a>
+      </div>
+
+      <!-- Mobile Menu Butto
+      <button mat-icon-button class="mobile-menu-btn" (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
+
+    <div style="margin-top:80px;">
+      <!-- Your page content here
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+ -->
+
+
 
 <div id="aboutus" class="property2">
     <h1>About Us</h1><br>
