--- a/MyApp/src/app/Component/toolbar/toolbar.css
+++ b/MyApp/src/app/Component/toolbar/toolbar.css
@@ -1,312 +1,17 @@
-/* p{
-  font-family:Arial,Helvetica, sans-serif;
-  font-size:medium;
+body {
+  margin: 0;
+  font-family: system-ui, sans-serif;
 }
-h1{
-  color:#b82228;
-  font-family:regular;
-  font-size:48px;
-}
-h2{
- color:#b82228;
-   font-family:regular;
-  font-size:30px;
-}
-button[mat-raised-button]{
-  background-color:#b82228;
-  color:#ffffff;
-}
-.about > p{
-  justify-content:left;
-}
-#aboutus{
-  padding-top:100px;
-}
-
-.property2{
-    background-color: #ffffff;
-    text-align:center;
-    padding:80px 0;
-    max-width: auto;
-    margin:0 auto;
-    height:auto;
-}
-.property2 p{
-  font-size: larger;
-  margin:0 auto;
-  width: 900px;
-}
-/* toolbar */
-/* 
-mat-toolbar{
-    background-color:#ffffff;
-    z-index:1000;
-    position: fixed;
-    border-bottom:1px solid white;
-}
-mat-toolbar span{
-  margin-left:20px;
-}
-.property1{  
-  margin-left:auto;
-}
-.property1 a{
-  padding: 5px 16px;
-  font-size: 12px;
-}
-a[mat-raised-button]{
-    background-color:#b82228;
-    color:#ffffff;
-   }
-
-/* Service cards */
-/*  
-.carousel-container {
-  display: flex;
-  align-items: center;
-  text-align:left;
-  justify-content: center;
-  width: 100%;
-  overflow: hidden;
+.wave-container {
   position: relative;
-  height:auto;
-  padding: 20px;
-}
-
-.cards-wrapper {
+  background: #09F;
+  color: #070606;
+  text-align: center;
   overflow: hidden;
-  width: 960px;
-  padding: 20px;
 }
-
-.cards {
-  display: flex;
-  transition: transform 0.5s ease;
-}
-.card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-}
-
-.card{
-  width: 300px;
-  height:350px;
-  margin: 0 10px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-} 
-
-.nav-button{
-  background: none;
-  border-radius: 50%;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-}
-.ig{
-  width:auto;
-  height:50%;
-  border-radius:8px;
-}
-
-/* Contact Form */
-/*  
-.property3 {
-    display: flex;
-    justify-content: center; 
-    align-items: flex-start; 
-    gap: 60px; 
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 50px 20px;
-    flex-wrap: wrap; 
-    text-align: left; 
-}
-.get-contact {
-    border-radius: 10px;
-    flex: 1 1 300px; 
-    max-width: 400px;
-}
-
-.get-contact form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.get-contact h2 {
-    margin-bottom: 15px;
-    text-align: center;
-}
-
-label {
-    font-weight: normal;
-    margin-bottom: 5px;
-}
-
-input, textarea {
-    width: 95%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 14px;
-}
-
-textarea {
-    resize: none;
-}
-
-.error {
-    color: red;
-    font-size: 13px;
-}
-
-form button {
-    width: 100%;
-    color: #fff;
-    background-color: #b82228;
-    border: none;
-    border-radius: 8px;
-    height: 40px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-form button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-}
-
-.get-company, .get-address {
-    flex: 1 1 150px;
-    max-width: 300px;
-}
-
-.get-company h2 {
-    color: #b82228;
-    margin-bottom: 10px;
-    text-align:center;
-}
-
-.get-company ul {
-    list-style: none;
-    padding: 0;
-    margin: 16px;
-    text-align:center;
-}
-
-.get-company li {
-    margin: 8px 0;
-}
-
-.get-company a {
-    text-decoration: none;
-    color: black;
-    font-size: 15px;
-}
-
-.get-company a:hover {
-    color: #b82228;
-}
-
-.get-address p {
-    font-size: 14px;
-    color: black;
-}
-.icon{
-  background: none;
-  border-style:none;
-}
-
-/* Responsive Design */
-/* 
-@media (max-width: 600px) {
-    .property3 {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
-
-    .get-company, .get-address {
-        text-align: center;
-    }
-
-    .get-contact {
-        width: 100%;
-        max-width: 400px;
-    }
-}
-/* Teams cards */
-/*  
-.team-section {
-  padding: 50px 20px;
-  background-color: #f8f9fa;
-}
-
-.team-title {
-  font-size: 2.5rem;
-  margin-bottom: 30px;
-  font-weight: 700;
-  color: #333;
-}
-
-.team-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 40px;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.team-card {
-  text-align:center;
-  padding: 20px;
-  border-radius: 12px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.team-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-}
-
-.profile-img {
-  width: 100%;
-  height: 50%;
-  border-radius: 7%;
-  object-fit: cover;
-  margin: 0 auto 15px;
-}
-.ig1{
-  width:12%;
-  height:15%;
-}
-
-.role {
-  z-index:500px;
-  font-weight: 600;
-  color: #003a70;
-  margin-bottom: 10px;
-  text-align:justify;
-  
-}
-
-.bio {
-  font-size: 0.9rem;
-  color: #666;
-  text-align:justify;
-  z-index:500px;
-}
-
-mat-card-actions a {
-  margin: 0 5px;
-  color: #003a70;
-  font-size: 12px;
-} */
- /* Smooth Scrolling */
 html {
   scroll-behavior: smooth;
 }
-
-/* Global Text Styling */
 p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: medium;
@@ -324,42 +29,18 @@ h2 {
   font-size: 30px;
 }
 
-/* Buttons */
 button[mat-raised-button],
 a[mat-raised-button] {
   background-color: #b82228;
   color: #ffffff;
 }
-
-/* About Section */
-.about > p {
-  text-align: left;
-}
-
-#aboutus {
-  padding-top: 100px;
-}
-
-.property2 {
-  background-color: #ffffff;
-  text-align: center;
-  padding: 80px 20px;
-  margin: 0 auto;
-}
-
-.property2 p {
-  font-size: larger;
-  margin: 0 auto;
-  max-width: 90%; /* responsive */
-}
-
-/* Toolbar */
 mat-toolbar {
   background-color: #ffffff;
   z-index: 1000;
   position: fixed;
   top: 0;
   width: 100%;
+  height: fit-content;
   border-bottom: 1px solid #eee;
 }
 
@@ -376,6 +57,95 @@ mat-toolbar span {
   font-size: 14px;
 }
 
+.mobile-container {
+  max-width: 480px;
+  margin: auto;
+  background-color: #fff;
+  color: white;
+  border-radius: 10px;
+}
+
+.topnav {
+  background-color: #003a70;
+  position: relative;
+  padding:20px;
+  width:100%;
+}
+
+.topnav a {
+  color: #ffffff;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: #fff;
+  display: block;
+  position: absolute;
+  justify-content:right;
+  margin-left:auto;
+  right: 100px;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: rgb(243, 242, 242);
+}
+
+.company-name {
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  color: #003a70;
+  font-weight: bold;
+  margin-left: 10px;
+}
+
+.desktop-nav {
+  overflow: hidden;
+  display: flex;
+  gap: 20px;
+}
+
+.desktop-nav a {
+  font-size: 16px;
+  font-weight: 500;
+  color: #070606;
+  text-decoration: none;
+}
+
+.desktop-nav a:hover {
+  color: #003a70;
+}
+.mobile-menu-btn {
+  display: none;
+}
+@media (max-width: 768px) {
+  .desktop-nav {
+    display: none; 
+  }
+  .mobile-menu-btn {
+    display: block; 
+}
+}
+/* About Section */
+
+.property2 {
+  background-color: #ffffff;
+  text-align: center;
+  padding: 40px 10px;
+  margin: 0 auto;
+}
+
+.property2 p {
+  font-size: larger;
+  margin: 0 auto;
+  text-align: justify;
+  max-width: 90%; 
+}
+
 /* Service Cards Section */
 .carousel-container {
   display: flex;
@@ -390,21 +160,21 @@ mat-toolbar span {
 .cards-wrapper {
   overflow: hidden;
   width: 100%;
-  max-width: 960px;
+  max-width: 1600px;
   padding: 20px;
 }
 
 .cards {
   display: flex;
-  flex-wrap: wrap; /* responsive rows */
+  flex-wrap: wrap; 
   justify-content: center;
-  gap: 20px;
+  gap: 100px;
   transition: transform 0.5s ease;
 }
 
 .card {
   width: 100%;
-  max-width: 300px;
+  max-width:400px;
   height: auto;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -422,8 +192,123 @@ mat-toolbar span {
 
 .ig {
   width: 100%;
-  height: auto;
+  height: 50%;
   border-radius: 8px;
+}
+/* Team Section */
+.team-section {
+  padding: 50px 20px;
+  background-color: #f8f9fa;
+}
+
+.team-title {
+  font-size: 2.5rem;
+  margin-bottom: 30px;
+  font-weight: 700;
+  color: #333;
+}
+
+.team-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 60px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.team-card {
+  text-align: center;
+  padding: 20px;
+  border-radius: 12px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.team-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+.profile-img {
+  width: 100%;
+  max-width: 180px;
+  height: auto;
+  border-radius: 7%;
+  object-fit: cover;
+  margin: 0 auto 15px;
+}
+
+.ig1 {
+  width: 25vh;
+  height: 10vh;
+}
+
+.role {
+  font-weight: 600;
+  color: #003a70;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+
+.bio {
+  font-size: 0.9rem;
+  color: #666;
+  text-align: justify;
+}
+
+mat-card-actions a {
+  margin: 0 5px;
+  color: #003a70;
+  font-size: 12px;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  .property3 {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 30px;
+  }
+
+  .get-company,
+  .get-address {
+    text-align: center;
+  }
+
+  .cards-wrapper {
+    max-width: 100%;
+    padding: 10px;
+  }
+
+  .card {
+    max-width: 90%;
+  }
+
+  .team-grid {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .property2 p {
+    font-size: 16px;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
 }
 
 /* Contact Form */
@@ -457,13 +342,18 @@ mat-toolbar span {
 }
 
 label {
-  font-weight: normal;
+  text-align:left;
+  font-weight: bold;
+  padding:10px 10px 10px 0px;
+  margin:10px;
+  color:#003a70;
   margin-bottom: 5px;
 }
 
 input,
 textarea {
   width: 95%;
+  margin:5px;
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -539,181 +429,5 @@ form button:disabled {
   border-style: none;
 }
 
-/* Team Section */
-.team-section {
-  padding: 50px 20px;
-  background-color: #f8f9fa;
-}
 
-.team-title {
-  font-size: 2.5rem;
-  margin-bottom: 30px;
-  font-weight: 700;
-  color: #333;
-}
-
-.team-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 40px;
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-.team-card {
-  text-align: center;
-  padding: 20px;
-  border-radius: 12px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.team-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-}
-
-.profile-img {
-  width: 100%;
-  max-width: 180px;
-  height: auto;
-  border-radius: 7%;
-  object-fit: cover;
-  margin: 0 auto 15px;
-}
-
-.ig1 {
-  width: 12%;
-  height: 15%;
-}
-
-.role {
-  font-weight: 600;
-  color: #003a70;
-  margin-bottom: 10px;
-  text-align: justify;
-}
-
-.bio {
-  font-size: 0.9rem;
-  color: #666;
-  text-align: justify;
-}
-
-mat-card-actions a {
-  margin: 0 5px;
-  color: #003a70;
-  font-size: 12px;
-}
-
-/* Responsive Design */
-@media (max-width: 768px) {
-  h1 {
-    font-size: 36px;
-  }
-
-  h2 {
-    font-size: 24px;
-  }
-
-  .property3 {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 30px;
-  }
-
-  .get-company,
-  .get-address {
-    text-align: center;
-  }
-
-  .cards-wrapper {
-    max-width: 100%;
-    padding: 10px;
-  }
-
-  .card {
-    max-width: 90%;
-  }
-
-  .team-grid {
-    gap: 20px;
-  }
-}
-
-@media (max-width: 480px) {
-  .property2 p {
-    font-size: 16px;
-  }
-
-  h1 {
-    font-size: 28px;
-  }
-
-  h2 {
-    font-size: 20px;
-  }
-}
-/* Toolbar Styling */
-.toolbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 15px;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 1000;
-}
-
-.company-name {
-  color: #b82228;
-  font-size: 18px;
-  margin-left: 10px;
-  font-family: Arial, sans-serif;
-}
-
-.property1 a {
-  margin-left: 10px;
-  font-size: 14px;
-}
-
-/* Mobile Menu Button */
-.mobile-menu-btn {
-  display: none;
-}
-
-/* Responsive Behavior */
-@media (max-width: 768px) {
-  .desktop-nav {
-    display: none; /* hide desktop menu */
-  }
-  .mobile-menu-btn {
-    display: block; /* show hamburger icon */
-  }
-}
-
-/* Mobile Sidenav Styling */
-.sidenav-container {
-  position: relative;
-  z-index: 1100;
-}
-
-.mobile-nav {
-  width: 250px;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-}
-
-.mobile-nav a {
-  font-size: 16px;
-  margin-bottom: 10px;
-  text-align: left;
-}
-
-.close-btn {
-  align-self: flex-end;
-  margin-bottom: 20px;
-}
 
