--- a/MyApp/src/app/app.html
+++ b/MyApp/src/app/app.html
@@ -1,3 +1,4 @@
 <!-- <app-root></app-root> -->
-<app-toolbar></app-toolbar> 
+<!-- <app-toolbar></app-toolbar>  -->
+<app-component3></app-component3>
 <router-outlet />
