--- a/MyApp/src/app/Component/toolbar/toolbar.css
+++ b/MyApp/src/app/Component/toolbar/toolbar.css
@@ -146,37 +146,37 @@ mat-toolbar span {
   max-width: 90%; 
 }
 
-/* Service Cards Section */
 .carousel-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  overflow: hidden;
-  position: relative;
+  gap: 10px;
   padding: 20px;
-}
-
-.cards-wrapper {
-  overflow: hidden;
-  width: 100%;
-  max-width: 1600px;
-  padding: 20px;
-}
-
-.cards {
-  display: flex;
   flex-wrap: wrap; 
+}
+
+.carousel-track {
+  display: flex;
+  gap: 20px;
   justify-content: center;
-  gap: 100px;
-  transition: transform 0.5s ease;
+  padding:20px;
+  height:100%;
+  overflow: hidden;
+  width: 100%;
+  max-width: 1300px;
 }
 
 .card {
   width: 100%;
   max-width:400px;
-  height: auto;
+  height: 10%;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.image {
+  width: 100%;
+  height: 50%;
+  border-radius: 8px;
 }
 
 .card:hover {
@@ -186,15 +186,41 @@ mat-toolbar span {
 
 .nav-button {
   background: none;
+  border-style: none;
   border-radius: 50%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
-.ig {
-  width: 100%;
-  height: 50%;
-  border-radius: 8px;
+
+@media (max-width: 1024px) {
+  .card {
+    flex: 1 1 45%;
+    max-width: 45%;
+  }
 }
+
+@media (max-width: 768px) {
+  .carousel-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .carousel-track {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .card {
+    flex: 1 1 90%;
+    max-width: 90%;
+  }
+
+  .nav-button {
+    font-size: 1.2em;
+    padding: 8px 12px;
+  }
+}
+
 /* Team Section */
 .team-section {
   padding: 50px 20px;
@@ -429,5 +455,40 @@ form button:disabled {
   border-style: none;
 }
 
+/* Common hidden state */
+.animate-section {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: all 1s ease-out;
+}
+
+/* When visible */
+.animate-section.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.fade-left {
+  transform: translateX(-50px);
+}
+
+.fade-right {
+  transform: translateX(50px);
+}
+
+.zoom-in {
+  transform: scale(0.8);
+}
+
+.slide-up {
+  transform: translateY(80px);
+}
+
+.show.fade-left,
+.show.fade-right,
+.show.zoom-in,
+.show.slide-up {
+  transform: translateX(0) scale(1) translateY(0);
+}
 
 
